Reseting edges width is now working + some fixes for java 1.4 compatibility ...